Fixed background image path for poster/banner for coming episodes page. Resized the default poster.png to the new size. Fixed CSS for banner default image also. IE Fix: Added NOWRAP to airdate field in the backlog overview IE Fix: Several CSS changes IE Fix: Fix alignment problem from inherited centering.

--- a/data/css/comingEpisodes.css
+++ b/data/css/comingEpisodes.css
@@ -53,8 +53,8 @@ div#insideContent {
 }
 
 .posterThumb {
-    background-image: url("images/poster.png");
-    display:table-cell;
+    background-image: url("/images/poster.png");
+    /* display:table-cell; */
     vertical-align: top;
     height: 200px;
     width: 136px;
@@ -62,8 +62,9 @@ div#insideContent {
     border-right: 1px solid #ccc;
 }
 .bannerThumb {
-    background-image: url("images/poster.png");
-    display:table-cell;    
+    background-image: url("/images/poster.png");
+    background-repeat: repeat-x;
+    /* display:table-cell; */
     vertical-align: top;
     height: 112px;
     width: 606px;
